--- a/index.qmd
+++ b/index.qmd
@@ -15,7 +15,7 @@ format:
 Hi! Welcome to the homepage of the nephroepidemiology research group of the University Medical Center (UMC) Utrecht.
 :::
 
-Our team is diverse in its [background and specialties](team.qmd), but shares the same mission: improving  clinical care and outcomes for individuals with chronic kidney disease, those on dialysis, and kidney transplant recipients, using epidemiological methods and big data.
+Our team is diverse in its [background and specialties](team.qmd), but all members share the same mission: improving  clinical care and outcomes for individuals with chronic kidney disease, those on dialysis, and kidney transplant recipients, using epidemiological methods and big data.
 
 To this end, we use advanced epidemiological and data scientific methods, applied to a wide range of large and granular data sources, including randomised controlled trials, cohort studies, electronic health records, and registries.
 
