updated resources + structure

--- a/resources.qmd
+++ b/resources.qmd
@@ -1,10 +1,22 @@
 ---
-title: "Additional resources"
+title: "Resources"
 ---
 
 This page contains several subpages with relevant resources. Additionally, the below resources may be of interest.
 
-||
+#### Kidneys
+|||
 |-------|-----|
 | [Nefrodata](https://ivisualz.sivz.nl/ivisualz/chartFlash/charts) | Interactive overview of Dutch CKD and kidney failure population |
 | [Nieratlas](https://nieratlas.nl/) | Overview of healthcare and related costs for individuals with kidney disease |
+
+#### Programming
+|||
+|-------|-----|
+| [R Graph Gallery](https://ivisualz.sivz.nl/ivisualz/chartFlash/charts) | How to make (almost) any graph in base R and ggplot2 |
+| [R-miss-tastic](https://rmisstastic.netlify.app/rpkg/) | Resources for managing missing data in R |
+
+#### Miscellaneous
+|||
+|-------|-----|
+
