added bi-weekly agenda

--- a/calendar.qmd
+++ b/calendar.qmd
@@ -17,3 +17,13 @@
 |30-Jun-2026, 12:15         |Defence          |Improving patient-centered care: focusing on patients and their caregivers|Esmee Driehuis (UMCU)
 |06-Jul-2026, 10:00-11:00   |Biweekly meeting |Café Creatinine  |                                          |
 |20-Jul-2026, 10:00-11:00   |Biweekly meeting |Café Creatinine  |                                          |
+
+#### Bi-weekly meeting agenda
+*Per individual:*
+- What's good?
+- What's cooking?
+- What's next?
+
+*As a group:*
+- What's coming up?
+- What's happening at the next Café Creatinine?
